[package]
name = "setup_read_cleanup"
version = "0.3.0"
authors = ["Takayuki Sato <sttk.xslet@gmail.com>"]
edition = "2021"
rust-version = "1.74.1"
description = "A library for safely transitioning through the three phases of shared resource access: setup, read, and cleanup."
documentation = "https://docs.rs/setup_read_cleanup"
readme = "README.md"
repository = "https://github.com/sttk/setup_read_cleanup-rust"
license = "MIT"
keywords = ["shared-resource", "thread-safe", "static-safe", "phase-transition", "graceful"]
categories = ["concurrency", "asynchronous", "rust-patterns"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"], optional = true }

[features]
setup_read_cleanup-on-tokio = ["tokio"]
setup_read_cleanup-graceful = []
default = []
full = ["setup_read_cleanup-on-tokio", "setup_read_cleanup-graceful"]

[dev-dependencies]
once_cell = "1"
